<resources>
    <string name="app_name">ProjetSession</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="adresse_courriel">Adresse courriel</string>
    <string name="premi_re_connexion">Première connexion?</string>
    <string name="se_connecter">Se connecter</string>
    <string name="agence_de_voyage_et_co">Agence de voyage et co.</string>
    <string name="nom">Nom</string>
    <string name="pr_nom">Prénom</string>
    <string name="ge">Âge</string>
    <string name="adresse">Adresse</string>
    <string name="num_ro_de_t_l_phone">Numéro de téléphone</string>
    <string name="r_p_ter_mot_de_passe">Répéter mot de passe</string>
    <string name="veuillez_entrer_vos_informations">Veuillez entrer vos informations</string>
    <string name="je_m_inscris">Je m\'inscris</string>
    <string name="rechercheVoy">Recherche de voyages</string>
    <string name="prix">Prix : </string>
    <string name="typeVoy">Type de voyage : </string>
    <string name="dateDep">Date du départ : </string>
    <string name="destination">Destination : </string>
    <string name="entreDest">Entrez votre destination</string>
    <string name="entrePrix">Entrez votre budget</string>
    <string name="entreType">Entrez votre type de voyage</string>
    <string name="entreDate">Entrez votre date de départ</string>
    <string name="rechercher">Rechercher</string>
    <string name="annuler" />
    <string name="voyage" />
    <string name="annulers">annuler</string>
</resources>