<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.caurele.projetsession.vue.AccueilActivity">

    <TextView
        android:id="@+id/id_titreAccueil"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"
        android:layout_marginBottom="96dp"
        android:text="@string/rechercheVoy"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/id_destText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/id_destText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="65dp"
        android:text="@string/destination"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/id_prixText"
        app:layout_constraintEnd_toStartOf="@+id/id_entreDest"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_titreAccueil" />

    <TextView
        android:id="@+id/id_prixText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="82dp"
        android:text="@string/prix"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/id_typeText"
        app:layout_constraintEnd_toStartOf="@+id/id_entrePrix"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_destText" />

    <TextView
        android:id="@+id/id_typeText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="97dp"
        android:text="@string/typeVoy"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/id_entreDate"
        app:layout_constraintEnd_toStartOf="@+id/id_entreType"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_prixText" />

    <TextView
        android:id="@+id/id_dateText"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="17dp"
        android:hint="@string/dateDep"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/id_entreDate"
        app:layout_constraintEnd_toStartOf="@+id/id_entreDate"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/id_entreDest"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:hint="@string/entreDest"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/id_destText"
        app:layout_constraintTop_toTopOf="@+id/id_destText" />

    <EditText
        android:id="@+id/id_entrePrix"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="71dp"
        android:ems="10"
        android:hint="@string/entrePrix"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/id_entreType"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/id_prixText"
        app:layout_constraintTop_toBottomOf="@+id/id_entreDest" />

    <EditText
        android:id="@+id/id_entreType"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginEnd="2dp"
        android:ems="10"
        android:hint="@string/entreType"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/id_typeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/id_typeText" />

    <EditText
        android:id="@+id/id_entreDate"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="74dp"
        android:ems="10"
        android:hint="@string/entreDate"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/id_rechercher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/id_dateText"
        app:layout_constraintTop_toBottomOf="@+id/id_typeText" />

    <Button
        android:id="@+id/id_rechercher"
        android:layout_width="184dp"
        android:layout_height="0dp"
        android:layout_marginEnd="91dp"
        android:layout_marginBottom="61dp"
        android:text="@string/rechercher"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_entreDate" />

</androidx.constraintlayout.widget.ConstraintLayout>