<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBEAF4"
    tools:context=".vue.ConnexionActivity">

    <TextView
        android:id="@+id/txtTitre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="81dp"
        android:layout_marginBottom="164dp"
        android:text="@string/agence_de_voyage_et_co"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/eTxtCourriel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnConnecter"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="51dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="29dp"
        android:backgroundTint="#887FF1"
        android:text="@string/se_connecter"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/btnInscrire"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eTxtMotPasse" />

    <Button
        android:id="@+id/btnInscrire"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="51dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="141dp"
        android:backgroundTint="#B1ABF3"
        android:text="@string/premi_re_connexion"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConnecter" />

    <EditText
        android:id="@+id/eTxtCourriel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="51dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="25dp"
        android:autofillHints=""
        android:textColorHint="#505050"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/adresse_courriel"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/eTxtMotPasse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitre" />

    <EditText
        android:id="@+id/eTxtMotPasse"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="51dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="28dp"
        android:autofillHints=""
        android:textColorHint="#505050"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/mot_de_passe"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnConnecter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eTxtCourriel" />

</androidx.constraintlayout.widget.ConstraintLayout>